font mobile issues again

--- a/css/nyan.css
+++ b/css/nyan.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&family=Rubik+Iso&display=swap');
+
 @font-face {
   font-family: 'octicons';
   src: url('../font/octicons.eot?#iefix') format('embedded-opentype'), url('../font/octicons.woff') format('woff'), url('../font/octicons.ttf') format('truetype'), url('../font/octicons.svg#octicons') format('svg');
